# agents-law

./: .gitignore  DESIGN.md  README.md  evidence.html  mkdocs.yml  note.md  problem.md  pyproject.toml
.github/workflows/: pages.yml
docs/: Evidence_Gate_Ideal_Vision.md
examples/: demo_agent.py  langchain_agent.py  llm_agent.py  refund_agent.py  remote_agent.py  trace_replay.py
policies/: marketing.yaml  refund.yaml
site-src/: adapters.md  architecture.md  cli.md  index.md  quickstart.md  remote-gate.md  roadmap.md  running-an-agent.md  telemetry.md  trace-replay.md  usage.md  vision.md
src/evidence_gate/: __init__.py  audit.py  cli.py  client.py  compiler.py  engine.py  errors.py  gate.py  policy.py  review.py  schemas.py  service.py  signing.py  telemetry.py  trace.py  trace_adapters.py
src/evidence_gate/integrations/: __init__.py  base.py  crewai.py  langchain.py  llamaindex.py
tests/: conftest.py  test_audit.py  test_cli.py  test_client.py  test_compare.py  test_compiler.py  test_crewai.py  test_engine.py  test_gate.py  test_langchain.py  test_llamaindex.py  test_review.py  test_service.py  test_signing.py  test_telemetry.py  test_trace.py  test_trace_adapters.py
tools/doc_build/: build_evidence_gate_vision.py
