[project]
name = "evidence-gate"
version = "0.3.0"
description = "A deterministic runtime enforcement gate that checks an agent's evidence before a state-changing action executes."
readme = "README.md"
authors = [
    { name = "Paritosh Baghel", email = "paritoshmmmec@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
client = [
    "httpx>=0.28",
]
langchain = [
    "langchain-core>=0.3",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "langchain-core>=0.3",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
